--- a/app/src/main/res/layout/activity_select_address.xml
+++ b/app/src/main/res/layout/activity_select_address.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.activity.member.SelectAddressActivity">
+
     <include layout="@layout/topbar_nor"></include>
-    <ListView
-        android:id="@+id/lv_address"
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/SwipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1"
-        android:background="#ffffff"
-        android:divider="@color/line"
-        android:dividerHeight="1dp"
-        android:scrollbars="none" />
+        android:layout_weight="1">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
     <com.healthclock.healthclock.widget.BorderTextView
         android:id="@+id/tv_add"
         android:layout_width="match_parent"
