--- a/app/src/main/res/layout/fragment_alarm_clock.xml
+++ b/app/src/main/res/layout/fragment_alarm_clock.xml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/bg"
+    android:orientation="vertical"
     tools:context=".ui.fragment.main.AlarmClockFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:id="@+id/rl_topbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="@dimen/dp_70"
+        android:background="@color/TRANSLUCENT"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/dp_20">
 
-</FrameLayout>
+        <com.healthclock.healthclock.widget.IconFontTextView
+            android:id="@+id/tv_scan"
+            android:layout_width="@dimen/topbar_icon_width_height"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5px"
+            android:gravity="center"
+            android:text="@string/ic_scan"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_26" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            style="@style/RedTitleTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="120px"
+            android:layout_marginRight="120px"
+            android:maxLines="1"
+            android:paddingTop="@dimen/dp_20"
+            android:text="美康闹钟"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_16" />
+
+        <com.healthclock.healthclock.widget.IconFontTextView
+            android:id="@+id/tv_right"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:padding="@dimen/dp_10"
+            android:text="设置"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_14" />
+
+        <View
+            style="@style/lineStyle"
+            android:layout_alignParentBottom="true" />
+
+    </RelativeLayout>
+</LinearLayout>
