--- a/ZXinglib/src/main/res/layout/zxl_capture.xml
+++ b/ZXinglib/src/main/res/layout/zxl_capture.xml
@@ -11,8 +11,9 @@
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <SurfaceView
@@ -24,4 +25,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</FrameLayout>
+</LinearLayout>
