--- a/app/src/main/res/layout/activity_capture.xml
+++ b/app/src/main/res/layout/activity_capture.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.activity.main.CaptureActivity">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/topbar_nor"></include>
 
-    <FrameLayout
+
+    <SurfaceView
+        android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent" />
 
-        <SurfaceView
-            android:id="@+id/surfaceView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <com.king.zxing.ViewfinderView
+        android:id="@+id/viewfinderView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cornerColor="?title_text_color"
+        app:frameColor="?title_text_color"
+        app:gridHeight="0dp"
+        app:labelText="@string/tips_scan_code1"
+        app:labelTextLocation="bottom"
+        app:labelTextSize="@dimen/sp_14"
+        app:laserColor="?title_text_color"
+        app:resultPointColor="?title_text_color" />
 
-        <com.king.zxing.ViewfinderView
-            android:id="@+id/viewfinderView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <ImageView
+        android:id="@+id/ivFlash"
+        style="@style/OnClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:src="@drawable/flash_selected_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    </FrameLayout>
-</LinearLayout>
+    <include layout="@layout/topbar_nor" />
+</android.support.constraint.ConstraintLayout>
