--- a/app/src/main/res/layout/indent_items.xml
+++ b/app/src/main/res/layout/indent_items.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/dp_10"
     android:background="@color/white"
     android:orientation="vertical">
@@ -48,14 +49,14 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -65,7 +66,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ellipsize="end"
-                    android:maxLines="1"
+                    android:padding="@dimen/dp_5"
+                    android:maxLines="2"
+                    android:text=""
                     android:textColor="@color/black" />
 
                 <TextView
@@ -73,7 +76,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
+                    android:padding="@dimen/dp_5"
                     android:maxLines="1"
+                    android:text=""
                     android:textColor="@color/text_color" />
             </LinearLayout>
 
@@ -88,12 +93,14 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:padding="@dimen/dp_5"
                     android:text="" />
 
                 <TextView
                     android:id="@+id/tv_shop_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_5"
                     android:text="" />
             </LinearLayout>
         </LinearLayout>
@@ -137,36 +144,58 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_margin="@dimen/dp_8"
         android:orientation="horizontal"
         android:visibility="gone">
 
         <com.healthclock.healthclock.widget.BorderTextView
             android:id="@+id/tv_cancel_del_indent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dp_4"
-            android:padding="@dimen/dp_5"
-            android:visibility="gone" />
+            android:layout_height="@dimen/dp_30"
+            android:layout_margin="@dimen/dp_5"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingRight="@dimen/dp_15"
+            android:textColor="@color/gray"
+            android:visibility="gone"
+            android:text=""
+            app:contentBackColor="@color/white"
+            app:cornerRadius="@dimen/dp_15"
+            app:strokeColor01="@color/gray"
+            app:strokeWidth01="1dp"/>
 
 
         <com.healthclock.healthclock.widget.BorderTextView
             android:id="@+id/tv_appraise_indent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dp_4"
-            android:padding="@dimen/dp_5"
-            android:visibility="gone" />
+            android:layout_height="@dimen/dp_30"
+            android:layout_margin="@dimen/dp_5"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingRight="@dimen/dp_15"
+            android:textColor="@color/gray"
+            android:visibility="gone"
+            android:text=""
+            app:contentBackColor="@color/white"
+            app:cornerRadius="@dimen/dp_15"
+            app:strokeColor01="@color/gray"
+            app:strokeWidth01="1dp"/>
 
 
         <com.healthclock.healthclock.widget.BorderTextView
             android:id="@+id/tv_pay"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dp_4"
-            android:padding="@dimen/dp_5"
-            android:textColor="@color/white"
-            android:visibility="gone" />
+            android:layout_height="@dimen/dp_30"
+            android:layout_margin="@dimen/dp_5"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingRight="@dimen/dp_15"
+            android:textColor="@color/bg_red"
+            android:visibility="gone"
+            android:text=""
+            app:contentBackColor="@color/white"
+            app:cornerRadius="@dimen/dp_15"
+            app:strokeColor01="@color/bg_red"
+            app:strokeWidth01="1dp"/>
 
     </LinearLayout>
 </LinearLayout>
