--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="bg_red">#FF0000</color>
     <color name="text_color">#656565</color>
     <color name="TRANSLUCENT">#00000000</color>
-
+    <color name="navpage">#FFE1E8EB</color>
     <color name= "tab_nor_color">#969696</color>
 
 
