--- a/app/src/main/res/layout/activity_edit_alarm.xml
+++ b/app/src/main/res/layout/activity_edit_alarm.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/allLayout"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@mipmap/bg"
@@ -17,7 +18,7 @@
         android:paddingTop="@dimen/dp_20">
 
         <com.healthclock.healthclock.widget.IconFontTextView
-            android:id="@+id/tv_scan"
+            android:id="@+id/btn_cancel"
             android:layout_width="@dimen/topbar_icon_width_height"
             android:layout_height="match_parent"
             android:layout_marginLeft="5px"
@@ -41,7 +42,7 @@
             android:textSize="@dimen/sp_16" />
 
         <com.healthclock.healthclock.widget.IconFontTextView
-            android:id="@+id/tv_right"
+            android:id="@+id/btn_save"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
@@ -57,10 +58,6 @@
 
     </RelativeLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#383838" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -78,10 +75,6 @@
                 android:theme="@style/AppTheme.Red"
                 android:timePickerMode="spinner" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="#383838" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -99,7 +92,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
-                        android:background="?title_text_color"
                         android:gravity="center"
                         android:text="重复"
                         android:textColor="#FFFFFF"
@@ -110,7 +102,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:layout_weight="1"
-                        android:background="?title_text_color"
                         android:gravity="center"
                         android:textColor="#80FFFFFF"
                         android:textSize="16sp" />
@@ -177,7 +168,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:layout_weight="1"
-                        android:background="?title_text_color"
                         android:gravity="center"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
@@ -190,10 +180,6 @@
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="#383838" />
 
 
                 <View
@@ -204,10 +190,6 @@
 
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="#383838" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -278,6 +260,8 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
+                    android:layout_marginEnd="18dp"
+                    android:layout_marginStart="18dp"
                     android:background="#383838" />
 
             </LinearLayout>
@@ -294,7 +278,7 @@
                     android:layout_height="@dimen/dp_40"
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/dp_20"
-                    android:gravity=""
+                    android:gravity="center"
                     android:text="删除闹钟"
                     android:textColor="@color/white"
                     app:contentBackColor="?title_text_color"
