--- a/app/src/main/res/layout/activity_my_alarm_clock.xml
+++ b/app/src/main/res/layout/activity_my_alarm_clock.xml
@@ -58,7 +58,7 @@
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_1"
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
