--- a/app/src/main/res/layout/fragment_ring_select.xml
+++ b/app/src/main/res/layout/fragment_ring_select.xml
@@ -6,13 +6,13 @@
     android:id="@+id/ring_select_llyt"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.main.RingSelectFragment">
+    tools:context=".ui.fragment.clock.RingSelectFragment">
 
     <RelativeLayout
         android:id="@+id/rl_topbar_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_70"
-        android:background="@color/TRANSLUCENT"
+        android:background="?title_text_color"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingTop="@dimen/dp_20">
@@ -61,21 +61,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray_background_color"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <com.astuetz.PagerSlidingTabStrip
             android:id="@+id/tabstrip"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:textColor="?title_text_color"
+            android:textColor="@color/gray"
             android:textSize="18sp"
             app:mySelectedColor="?title_text_color"
-            app:pstsDividerColor="?title_text_color"
+            app:pstsDividerColor="@android:color/transparent"
             app:pstsIndicatorColor="?title_text_color"
             app:pstsIndicatorHeight="3dp"
             app:pstsShouldExpand="true"
-            app:pstsTabBackground="?title_text_color" />
+            app:pstsTabBackground="@color/white" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/fragment_ring_select_sort"
