--- a/app/src/main/res/layout/fragment_system_ring.xml
+++ b/app/src/main/res/layout/fragment_system_ring.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
@@ -12,6 +13,7 @@
 
     <TextView
         android:id="@android:id/empty"
+        android:visibility="gone"
         style="@style/ring_select_no_file_tv"
         android:text="@string/no_system_ring_file" />
 
